# Korean-Sign-Language-Project

./: .gitignore  README.md  main.py  pyproject.toml
data/: angle_num_3_data.csv  angle_num_data.csv  angle_vector_num_5_data.csv  guide_box.csv  guide_box_ratio.csv  merged_data.csv  merged_num_data.csv  sign_code.csv  sign_data.csv
data/history_data/sign_data/: sign_data_1.csv  (+7 more)
data/sign_data/: sign_data_0.csv  sign_data_1.csv  sign_data_10.csv  sign_data_11.csv  sign_data_14.csv  sign_data_15.csv  sign_data_16.csv  sign_data_17.csv  sign_data_2.csv  sign_data_20.csv  sign_data_21.csv  sign_data_22.csv  sign_data_23.csv  sign_data_24.csv  sign_data_3.csv  sign_data_4.csv  sign_data_5.csv  sign_data_6.csv  sign_data_7.csv  sign_data_8.csv  sign_data_9.csv
models/: lr_test_model.pkl  rf_test_model.pkl  xgb_angle_model.pkl  xgb_like_hate_angle_vector_model.pkl  xgb_like_hate_right_wrong_model.pkl  xgb_num_3_angle_model.pkl  xgb_num_5_angle_model.pkl  xgb_num_5_angle_vector_model.pkl  xgb_num_7_angle_vector_model.pkl  xgb_num_model.pkl  xgb_sample_angle_vector_model.pkl  xgb_sample_model.pkl  xgb_test_model.pkl
src/app/: main.py
src/data_collection/: check_data.ipynb  data_collect_yeon.py  guide_box.py  guide_box_func.py  mediapipe_data.py  mediapipe_guide_box.py  save_images_landmark.py  save_webcam_image.py
src/modeling/: angular_number_train.ipynb  ksl_classfication.py  merge_number_train.ipynb  merge_train.ipynb  stream_predict.py
src/utils/: mediapipe_util.py
utils/: angular_util.py  cv2_util.py  guide_box.py  image_preprocessed_util.py  mediapipe_util.py
(+1 files in other folders)
